# wikitech-search

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: config.py  db.py  main.py  model_manager.py  processing.py  summarizer.py  wiki_api.py
app/api/: crud.py  models.py  processing.py  schemas.py  search.py  summaries.py
deploy/: configure-server.sh  deploy.sh  generate-env.sh  nginx.conf
migrations/models/: 2_20230507161547_initial_migration.py
scripts/: configure-server.sh  deploy.sh  install-docker.sh  install-nginx.sh
tests/: conftest.py  test_summaries.py  test_summaries_unit.py
