[tool.poetry]
name = "fastapi-toolforge-blueprint"
version = "0.1.0"
description = "Sample FastAPI app Configured for deployment on Toolforge."
authors = ["Slavina Stefanova <me@slavina.dev>"]
readme = "README.md"
packages = [{include = "fastapi_toolforge_blueprint"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
tortoise-orm = {extras = ["aiosqlite"], version = "^0.19.3"}
aerich = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
