[tool.poetry]
name = "fastapi-toolforge-blueprint"
version = "0.1.0"
description = "Sample FastAPI app Configured for deployment on Toolforge."
authors = ["Slavina Stefanova <me@slavina.dev>"]
readme = "README.md"
packages = [{include = "fastapi_toolforge_blueprint"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
tortoise-orm = {extras = ["aiosqlite"], version = "^0.19.3"}
aerich = "^0.7.1"
gunicorn = "^20.1.0"
newspaper3k = "^0.2.8"
transformers = "^4.28.1"
torch = "^2.0.1"
sentencepiece = "^0.1.99"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"
pytest-xdist = "^3.2.1"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
