[tool.poetry]
name = "wikitech-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wikitech_search"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
annoy = "^1.17.2"
mwedittypes = "^2.0.2"
mwparserfromhell = "^0.6.4"
requests = "^2.30.0"
sentence-transformers = "^2.2.2"
transformers = "^4.29.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
